Add support for limits and requests